# CourseWork_5

./: README.md  SQL_queries  config.py  main.py  pyproject.toml
src/: db_manager.py  db_module.py  hh_vacancy_parser.py
utils/: user_interaction.py
