[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = ""
authors = ["ekaterina <sychevaee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
params = "^0.9.0"
psycopg2 = "2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
